--- a/api/package.json
+++ b/api/package.json
@@ -21,7 +21,9 @@
     "jsonwebtoken": "^9.0.1",
     "log4js": "^6.9.1",
     "mongoose": "^7.4.3",
-    "nodemailer": "^6.9.4"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
