--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.1",
     "log4js": "^6.9.1",
     "mongoose": "^7.4.3",
