--- a/api/package.json
+++ b/api/package.json
@@ -19,12 +19,16 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.2",
     "https": "^1.0.0",
     "jsonwebtoken": "^9.0.1",
     "log4js": "^6.9.1",
     "mongoose": "^7.4.3",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.4"
+    "nodemailer": "^6.9.4",
+    "sharp": "^0.33.5",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
