--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
-**/.DS_Store
+.DS_Store
 .firebase
-build
+firestore-debug.log
+firebase-debug*.log
+
+# dependencies
+node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+**/build
+
+# misc
+.env**
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
