staging modifications for local and deployment syntax and structure modifications

--- a/firebase.json
+++ b/firebase.json
@@ -48,7 +48,7 @@
           "function": "basics"
         },
         {
-          "source": "/request/**",
+          "source": "/email/**",
           "function": "email"
         },
         {
