--- a/functions/package.json
+++ b/functions/package.json
@@ -4,10 +4,10 @@
   "description": "Cloud Functions for Firebase",
   "scripts": {
     "lint": "eslint . --fix",
-    "environment": "NODE_ENV=production node Manager/EnvironmentManager.js",
+    "environment": "cross-env NODE_ENV=production node Manager/EnvironmentManager.js",
     "serve": "firebase emulators:start --only functions",
     "shell": "firebase functions:shell",
-    "start": "NODE_ENV=development nodemon App/DevelopmentApp.js",
+    "start": "cross-env NODE_ENV=development nodemon App/DevelopmentApp.js",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
@@ -20,6 +20,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cron": "^3.3.2",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
