--- a/admin/package.json
+++ b/admin/package.json
@@ -32,5 +32,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.7",
+    "prettier": "^3.4.2"
   }
 }
