--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "firebase": "^11.2.0",
     "pako": "^2.1.0",
     "qs": "^6.11.2",
     "react": "^18.2.0",
@@ -22,6 +23,7 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
+    "uuid": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
