--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "browser-image-compression": "^2.0.2",
     "firebase": "^11.2.0",
+    "heic2any": "^0.0.4",
     "pako": "^2.1.0",
     "qs": "^6.11.2",
     "react": "^18.2.0",
