--- a/admin/package.json
+++ b/admin/package.json
@@ -4,9 +4,18 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.8",
+    "@mui/styled-engine-sc": "^7.0.0",
+    "@reduxjs/toolkit": "^2.6.1",
+    "axios": "^1.8.4",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-paginate": "^8.3.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
