--- a/admin/package.json
+++ b/admin/package.json
@@ -10,7 +10,10 @@
     "@mui/styled-engine-sc": "^7.0.0",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.4",
+    "browser-image-compression": "^2.0.2",
     "cra-template": "1.2.0",
+    "firebase": "^11.6.0",
+    "heic2any": "^0.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-paginate": "^8.3.0",
