Added github action v4

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -40,10 +40,10 @@ jobs:
       - name: Install functions dependencies
         run: npm --prefix ./functions ci
 
-      - name: Run lint and environment setup
-        run: |
-          npm --prefix ./functions run lint
-          npm --prefix ./functions run environment
+      # - name: Run lint and environment setup
+      #   run: |
+      #     npm --prefix ./functions run lint
+      #     npm --prefix ./functions run environment
 
       - name: Deploy to Firebase
         run: firebase deploy --only hosting,functions,firestore,storage --project karinas-64571 --non-interactive
