--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -46,6 +46,6 @@ jobs:
       #     npm --prefix ./functions run environment
 
       - name: Deploy to Firebase
-        run: firebase deploy --only hosting,functions,firestore,storage --project karinas-64571 --non-interactive
+        run: firebase deploy
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
