--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -27,6 +27,48 @@ jobs:
           cd functions
           npm install
 
+      - name: Create admin env file
+        run: |
+          echo "REACT_APP_TYPE=${{ secrets.REACT_APP_TYPE }}" >> ./admin/.env
+          echo "REACT_APP_PROJECT_ID=${{ secrets.REACT_APP_PROJECT_ID }}" >> ./admin/.env
+          echo "REACT_APP_PRIVATE_KEY_ID=${{ secrets.REACT_APP_PRIVATE_KEY_ID }}" >> ./admin/.env
+          echo "REACT_APP_PRIVATE_KEY=${{ secrets.REACT_APP_PRIVATE_KEY }}" >> ./admin/.env
+          echo "REACT_APP_CLIENT_EMAIL=${{ secrets.REACT_APP_CLIENT_EMAIL }}" >> ./admin/.env
+          echo "REACT_APP_CLIENT_ID=${{ secrets.REACT_APP_CLIENT_ID }}" >> ./admin/.env
+          echo "REACT_APP_AUTH_URI=${{ secrets.REACT_APP_AUTH_URI }}" >> ./admin/.env
+          echo "REACT_APP_TOKEN_URI=${{ secrets.REACT_APP_TOKEN_URI }}" >> ./admin/.env
+          echo "REACT_APP_AUTH_PROVIDER_X509_CERT_URL=${{ secrets.REACT_APP_AUTH_PROVIDER_X509_CERT_URL }}" >> ./admin/.env
+          echo "REACT_APP_CLIENT__X509_CERT_URL=${{ secrets.REACT_APP_CLIENT__X509_CERT_URL }}" >> ./admin/.env
+          echo "REACT_APP_UNIVERSE_DOMAIN=${{ secrets.REACT_APP_UNIVERSE_DOMAIN }}" >> ./admin/.env
+          echo "REACT_APP_API_KEY=${{ secrets.REACT_APP_API_KEY }}" >> ./admin/.env
+          echo "REACT_APP_AUTH_DOMAIN=${{ secrets.REACT_APP_AUTH_DOMAIN }}" >> ./admin/.env
+          echo "REACT_APP_MESSAGING_SENDER_ID=${{ secrets.REACT_APP_MESSAGING_SENDER_ID }}" >> ./admin/.env
+          echo "REACT_APP_APP_ID=${{ secrets.REACT_APP_APP_ID }}" >> ./admin/.env
+          echo "REACT_APP_MEASUREMENT_ID=${{ secrets.REACT_APP_MEASUREMENT_ID }}" >> ./admin/.env
+          echo "REACT_APP_STORAGE_BUCKET=${{ secrets.REACT_APP_STORAGE_BUCKET }}" >> ./admin/.env
+          echo "REACT_APP_DATABASE_URL=${{ secrets.REACT_APP_DATABASE_URL }}" >> ./admin/.env
+
+      - name: Create client env file
+        run: |
+          echo "REACT_APP_TYPE=${{ secrets.REACT_APP_TYPE }}" >> ./client/.env
+          echo "REACT_APP_PROJECT_ID=${{ secrets.REACT_APP_PROJECT_ID }}" >> ./client/.env
+          echo "REACT_APP_PRIVATE_KEY_ID=${{ secrets.REACT_APP_PRIVATE_KEY_ID }}" >> ./client/.env
+          echo "REACT_APP_PRIVATE_KEY=${{ secrets.REACT_APP_PRIVATE_KEY }}" >> ./client/.env
+          echo "REACT_APP_CLIENT_EMAIL=${{ secrets.REACT_APP_CLIENT_EMAIL }}" >> ./client/.env
+          echo "REACT_APP_CLIENT_ID=${{ secrets.REACT_APP_CLIENT_ID }}" >> ./client/.env
+          echo "REACT_APP_AUTH_URI=${{ secrets.REACT_APP_AUTH_URI }}" >> ./client/.env
+          echo "REACT_APP_TOKEN_URI=${{ secrets.REACT_APP_TOKEN_URI }}" >> ./client/.env
+          echo "REACT_APP_AUTH_PROVIDER_X509_CERT_URL=${{ secrets.REACT_APP_AUTH_PROVIDER_X509_CERT_URL }}" >> ./client/.env
+          echo "REACT_APP_CLIENT__X509_CERT_URL=${{ secrets.REACT_APP_CLIENT__X509_CERT_URL }}" >> ./client/.env
+          echo "REACT_APP_UNIVERSE_DOMAIN=${{ secrets.REACT_APP_UNIVERSE_DOMAIN }}" >> ./client/.env
+          echo "REACT_APP_API_KEY=${{ secrets.REACT_APP_API_KEY }}" >> ./client/.env
+          echo "REACT_APP_AUTH_DOMAIN=${{ secrets.REACT_APP_AUTH_DOMAIN }}" >> ./client/.env
+          echo "REACT_APP_MESSAGING_SENDER_ID=${{ secrets.REACT_APP_MESSAGING_SENDER_ID }}" >> ./client/.env
+          echo "REACT_APP_APP_ID=${{ secrets.REACT_APP_APP_ID }}" >> ./client/.env
+          echo "REACT_APP_MEASUREMENT_ID=${{ secrets.REACT_APP_MEASUREMENT_ID }}" >> ./client/.env
+          echo "REACT_APP_STORAGE_BUCKET=${{ secrets.REACT_APP_STORAGE_BUCKET }}" >> ./client/.env
+          echo "REACT_APP_DATABASE_URL=${{ secrets.REACT_APP_DATABASE_URL }}" >> ./client/.env
+
       - name: Build client and admin apps
         run: |
           npm --prefix ./client install
